<resources>
    <string name="app_name">RackToSwitchRequest</string>
    <string name="rack">Rack</string>
    <string name="slot">Slot</string>
    <string name="port">Port</string>
    <string name="room">Room</string>
    <string name="submit_connection_request">Submit Connection Request</string>
    <string name="connection_type">Connection Type</string>

    <array name="arRoom">
        <item>F01</item>
        <item>F02</item>
        <item>F03</item>
        <item>F04</item>
        <item>F05</item>
        <item>F06</item>
        <item>F07</item>
        <item>F08</item>
        <item>F09</item>
        <item>F10</item>
    </array>
    <string-array name="arRack">
        <item>.1</item>
        <item>.2</item>
    </string-array>

    <array name="arRackSlot">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
    </array>

    <array name="arType">
        <item>-</item>
        <item>Phone</item>
        <item>TV</item>
        <item>Printer</item>
    </array>
</resources>
